fix issue#69. - removed ChangeUserPasswordDTO, GroupForSemesterDTO, GroupedLessonInfoDTO because it never uses. - removed field disable from GroupDTO and teacherDTO because mostly it is not used. - added new class DTO TeacherForUpdateDTO and GroupForUpdateDTO with field disable. - added teacher and linkToMeeting instead teacherForSite wherever teacherForSite is used - added method teacherDTOToTeacherForSite for TeacherMapper